# ctock-seer

./: CMakeLists.txt  README.md
src/: ctock-seer.cpp  flowchart.txt  lstm.cpp  lstm.h  main.cpp  manip.h  menu-option.txt  menu.cpp  menu.h  print.cpp  print.h  stockrow.h  struc.h  test.cpp  util.cpp  util.h
tools/: data-grab.py  example.csv
